Adding ability to provide the make target in the re2c_action variable (e.g. install, uninstall), defaults to install. Renaming file to make change more apparently structurally.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,4 @@ re2c_version: "1.0.3"
 re2c_repository: {name: 're2c',url: 'https://github.com/skvadrik/re2c.git',tag: "{{ re2c_version }}"}
 compiling_path: '/home/sources'
 re2c_install_dir: '/usr'
+re2c_action: 'install'
