--- a/tasks/Common/deploy_re2c.yml
+++ b/tasks/Common/deploy_re2c.yml
@@ -26,7 +26,7 @@
     - "./autogen.sh"
     - "./configure --prefix={{ re2c_install_dir }}"
     - "make"
-    - "make install"
+    - "make {{ re2c_action }}"
 
 # Clean up
 - file:
